--- a/Haraj_app/Info.plist
+++ b/Haraj_app/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
+	<key>CFBundleDisplayName</key>
+	<string>تم</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -21,6 +23,8 @@
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>fb1317286481660217</string>
@@ -29,6 +33,25 @@
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>Fabric</key>
+	<dict>
+		<key>APIKey</key>
+		<string>4f1d356981fcb72b2a564e565bf1472364904aa0</string>
+		<key>Kits</key>
+		<array>
+			<dict>
+				<key>KitInfo</key>
+				<dict>
+					<key>consumerKey</key>
+					<string>X287oIrcSqHX86y89JKTjnZLV</string>
+					<key>consumerSecret</key>
+					<string>iMxhEgXILMA4iB8slKLby5H1xYvV2B7vL1tlzYUjKB588TCnYb</string>
+				</dict>
+				<key>KitName</key>
+				<string>Twitter</string>
+			</dict>
+		</array>
+	</dict>
 	<key>FacebookAppID</key>
 	<string>1317286481660217</string>
 	<key>FacebookDisplayName</key>
@@ -73,24 +96,5 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>Fabric</key>
-	<dict>
-		<key>APIKey</key>
-		<string>4f1d356981fcb72b2a564e565bf1472364904aa0</string>
-		<key>Kits</key>
-		<array>
-			<dict>
-				<key>KitInfo</key>
-				<dict>
-					<key>consumerKey</key>
-					<string>X287oIrcSqHX86y89JKTjnZLV</string>
-					<key>consumerSecret</key>
-					<string>iMxhEgXILMA4iB8slKLby5H1xYvV2B7vL1tlzYUjKB588TCnYb</string>
-				</dict>
-				<key>KitName</key>
-				<string>Twitter</string>
-			</dict>
-		</array>
-	</dict>
 </dict>
 </plist>
