--- a/Haraj_app/UrlName.plist
+++ b/Haraj_app/UrlName.plist
@@ -14,5 +14,7 @@
 	<string>http://www.tammapp.com/app/savepicture.php</string>
 	<key>removepicture</key>
 	<string>http://www.tammapp.com/app/removepicture.php</string>
+	<key>suggestpost</key>
+	<string>http://www.tammapp.com/app/suggestedposts.php</string>
 </dict>
 </plist>
