--- a/Haraj_app/UrlName.plist
+++ b/Haraj_app/UrlName.plist
@@ -16,5 +16,7 @@
 	<string>http://www.tammapp.com/app/removepicture.php</string>
 	<key>suggestpost</key>
 	<string>http://www.tammapp.com/app/suggestedposts.php</string>
+	<key>postimages</key>
+	<string>http://www.tammapp.com/app/postimages.php</string>
 </dict>
 </plist>
