--- a/Haraj_app/UrlName.plist
+++ b/Haraj_app/UrlName.plist
@@ -20,5 +20,7 @@
 	<string>http://www.tammapp.com/app/postimages.php</string>
 	<key>cancelpost</key>
 	<string>http://www.tammapp.com/app/cancelpost.php</string>
+	<key>chatcomments</key>
+	<string>http://www.tammapp.com/app/chat.php</string>
 </dict>
 </plist>
